--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,6 @@
 ; Most of the testing and implementation is done on the ESP32 Dev board. 
 [env:nodemcuv2]
 platform = espressif8266
-framework = arduino
 board = nodemcuv2
+framework = arduino
+monitor_speed = 9600
